@@ -83,6 +83,10 @@ correct_light_blobs_in_microscope_mosaic.m:
 	Correct the colour blob created by the microscope's light in
 	each tile of a mosaic, e.g. for histology.
 
+scirunnrrd_intersect_plane.m:
+
+	Optimise intersection plane for SCI NRRD segmentation mask.
+
 scirunnrrd_vertical_rot3.m:
 
 	Compute the 3D rotation matrix to make a point cloud vertical.
